trunk/Archive/79ff89e77f1d633d10e77e1180ad6fd6-25dabfc2c190f5ef027f31d968947336/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:10:25: error: expected ')'
        A() { set_something(foo{}); }
                               ^
main.cpp:10:21: note: to match this '('
        A() { set_something(foo{}); }
                           ^
1 error generated.
